--- a/plugin.xml
+++ b/plugin.xml
@@ -3,7 +3,7 @@
 <plugin xmlns="http://apache.org/cordova/ns/plugins/1.0"
         xmlns:android="http://schemas.android.com/apk/res/android"
         id="novonity-plugin-alipay"
-        version="1.0.0">
+        version="1.1.0">
 
   <name>AliPay</name>
   <description>alipay plugin</description>
@@ -11,7 +11,7 @@
   <keywords>alipay</keywords>
 
   <js-module src="www/AliPay.js" name="AliPay">
-    <clobbers target="Alipay"/>
+    <clobbers target="AliPay"/>
   </js-module>
 
   <!-- android -->
